框架以及布局已经完成，实现了用户授权登录的功能

--- a/app/src/main/res/layout/fragment_book_readed.xml
+++ b/app/src/main/res/layout/fragment_book_readed.xml
@@ -5,10 +5,16 @@
     android:orientation="vertical"
     tools:context="com.kyletung.doubanbookmovie.book.BookFragmentReaded">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="fragment book readed" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_book_readed_recyclcer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp" />
+
 
 </LinearLayout>
