--- a/app/src/main/res/layout/fragment_book_reading.xml
+++ b/app/src/main/res/layout/fragment_book_reading.xml
@@ -1,11 +1,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.kyletung.doubanbookmovie.book.BookFragmentReading">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="fragment book reading" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/fragment_book_reading_recyclcer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp" />
 
 </LinearLayout>
