--- a/app/src/main/res/layout/activity_main_navigation_header.xml
+++ b/app/src/main/res/layout/activity_main_navigation_header.xml
@@ -1,12 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="150dp"
+    android:background="#5ea8ff">
 
-    <ImageView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/navigation_header_image"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_above="@+id/navigation_header_name"
+            android:src="@mipmap/ic_launcher"
+            app:border_color="#ffffff"
+            app:border_width="2dp" />
+
+        <TextView
+            android:id="@+id/navigation_header_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:gravity="end"
+            android:text="User Name"
+            android:textColor="@color/fragment_book_item_textcolor"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/navigation_header_out"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:background="@drawable/fragment_book_item_price_background"
+        android:clickable="true"
+        android:padding="4dp"
+        android:text="@string/navigation_header_out"
+        android:textColor="@color/fragment_book_item_textcolor" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/navigation_header_in"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:background="@drawable/fragment_book_item_price_background"
+        android:clickable="true"
+        android:padding="4dp"
+        android:text="@string/navigation_header_in"
+        android:textColor="@color/fragment_book_item_textcolor" />
+
+</RelativeLayout>
