--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,16 @@
     <color name="tablayout_text_selected_color">#ffffff</color>
     <color name="tablayout_indicator_color">#ffffff</color>
 
+    <!-- 首页 -->
+    <color name="fragment_home_item">#f97956</color>
+    <color name="fragment_home_item_textcolor">#ffffff</color>
+
+    <!-- 书籍 -->
+    <color name="fragment_book_item">#f97956</color>
+    <color name="fragment_book_item_textcolor">#ffffff</color>
+
+    <!-- 电影 -->
+    <color name="fragment_movie_item">#f97956</color>
+    <color name="fragment_movie_item_textcolor">#ffffff</color>
+
 </resources>
