修复一个 Bug，即在切换不同 Fragment 时 Fragment 中的 TabLayout 不显示 Title 的问题

--- a/app/src/main/res/layout/fragment_movie_america.xml
+++ b/app/src/main/res/layout/fragment_movie_america.xml
@@ -6,6 +6,8 @@
     tools:context="com.kyletung.doubanbookmovie.movie.MovieFragmentAmerica">
 
     <android.support.v7.widget.RecyclerView
+        android:clipToPadding="false"
+        android:clipChildren="false"
         android:id="@+id/fragment_movie_america_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
