--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,6 +1,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <android.support.design.widget.TabLayout
+        android:elevation="5dp"
+        android:id="@+id/fragment_search_tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/toolbar_background"
+        app:tabIndicatorColor="@color/tablayout_indicator_color"
+        app:tabIndicatorHeight="3dp"
+        app:tabSelectedTextColor="@color/tablayout_text_selected_color"
+        app:tabTextColor="@color/tablayout_text_unselected_color" />
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/fragment_search_viewpager"
