--- a/app/src/main/res/layout/fragment_search_movie.xml
+++ b/app/src/main/res/layout/fragment_search_movie.xml
@@ -1,13 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_search_movie_swipe"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.kyletung.doubanbookmovie.search.SearchFragmentMovie">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:clipToPadding="false"
+        android:clipChildren="false"
+        android:id="@+id/fragment_search_movie_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:padding="8dp" />
 
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
