--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,17 +17,22 @@
     <color name="google_green">#34a853</color>
 
     <!-- 首页 -->
-    <color name="fragment_home_item">#f97956</color>
-    <color name="fragment_home_item_textcolor">#ffffff</color>
 
     <!-- 书籍 -->
     <color name="fragment_book_item">#f97956</color>
     <color name="fragment_book_item_textcolor">#ffffff</color>
+    <color name="fragment_book_item_textcontentcolor">#444444</color>
+    <color name="fragment_book_item_texttitlecolor">#111111</color>
 
     <!-- 电影 -->
     <color name="fragment_movie_item">#f97956</color>
     <color name="fragment_movie_item_texttitlecolor">#111111</color>
     <color name="fragment_movie_item_textcontentcolor">#444444</color>
     <color name="fragment_movie_item_textcolor">#ffffff</color>
+
+    <!-- 搜索 -->
+    <color name="fragment_search_text_background">#388e3c</color>
+    <color name="fragment_search_text_hint_color">#cccccc</color>
+    <color name="fragment_search_text_input">#ffffff</color>
 
 </resources>
