完成了电影与书籍的详情界面

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -16,6 +16,7 @@
         android:paddingLeft="16dp">
 
         <EditText
+            android:maxLines="1"
             android:textColor="@color/fragment_search_text_input"
             android:id="@+id/fragment_search_text"
             android:layout_width="0dp"
