--- a/app/src/main/res/menu/menu_book_detail.xml
+++ b/app/src/main/res/menu/menu_book_detail.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context="com.kyletung.doubanbookmovie.bookdetail.BookDetailActivity">
     <item
-        android:id="@+id/action_about"
+        android:id="@+id/book_open_in_browser"
         android:orderInCategory="100"
-        android:title="@string/action_about"
+        android:title="@string/book_detail_start_in_browser"
         app:showAsAction="never" />
 </menu>
