--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -8,4 +8,10 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="OtherActivity" parent="Theme.AppCompat.Light.NoActionBar">
+
+        <item name="android:colorPrimaryDark">@color/about_status_background</item>
+
+    </style>
+
 </resources>
