--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -9,9 +9,11 @@
     </style>
 
     <style name="OtherActivity" parent="Theme.AppCompat.Light.NoActionBar">
-
         <item name="android:colorPrimaryDark">@color/about_status_background</item>
+    </style>
 
+    <style name="LauncherScreen" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/launcher_screen</item>
     </style>
 
 </resources>
