--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -1,22 +1,34 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:elevation="5dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/toolbar_background"
-        android:minHeight="?attr/actionBarSize"
-        app:popupTheme="@style/Theme.AppCompat.Light"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:orientation="vertical">-->
 
-    <ScrollView
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/toolbar_background"
+            android:elevation="5dp"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:popupTheme="@style/Theme.AppCompat.Light" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,15 +43,15 @@
                 android:gravity="center">
 
                 <android.support.v7.widget.CardView
-                    app:cardElevation="2dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    app:cardElevation="2dp">
 
-                <ImageView
-                    android:id="@+id/book_detail_image"
-                    android:layout_width="180dp"
-                    android:layout_height="270dp"
-                    android:scaleType="centerCrop" />
+                    <ImageView
+                        android:id="@+id/book_detail_image"
+                        android:layout_width="180dp"
+                        android:layout_height="270dp"
+                        android:scaleType="centerCrop" />
 
                 </android.support.v7.widget.CardView>
 
@@ -61,45 +73,45 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
 
-                    <HorizontalScrollView
-                        android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:layout_height="wrap_content">
+                        <HorizontalScrollView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
 
-                            <TextView
-                                android:id="@+id/book_detail_title"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Name"
-                                android:textSize="24sp" />
+                                <TextView
+                                    android:id="@+id/book_detail_title"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Name"
+                                    android:textSize="24sp" />
 
-                            <TextView
-                                android:id="@+id/book_detail_subtitle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="8dp"
-                                android:text="subtitle"
-                                android:textSize="16sp" />
+                                <TextView
+                                    android:id="@+id/book_detail_subtitle"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="8dp"
+                                    android:text="subtitle"
+                                    android:textSize="16sp" />
 
-                        </LinearLayout>
+                            </LinearLayout>
 
-                    </HorizontalScrollView>
+                        </HorizontalScrollView>
 
                         <TextView
-                            android:layout_marginLeft="8dp"
                             android:id="@+id/book_detail_points"
-                            android:textSize="24sp"
-                            android:textColor="@color/book_detail_points"
-                            android:text="Points"
-                            android:gravity="center"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent" />
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="8dp"
+                            android:gravity="center"
+                            android:text="Points"
+                            android:textColor="@color/book_detail_points"
+                            android:textSize="24sp" />
 
-                        </LinearLayout>
+                    </LinearLayout>
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -449,6 +461,17 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_mode_edit_white_18dp"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:borderWidth="0dp"
+        android:layout_gravity="bottom|end" />
+
+    <!--</LinearLayout>-->
+
+</android.support.design.widget.CoordinatorLayout>
