--- a/main/src/main/res/values/dimens.xml
+++ b/main/src/main/res/values/dimens.xml
@@ -24,4 +24,7 @@
     <dimen name="base_text_24sp">24sp</dimen>
     <dimen name="base_text_32sp">32sp</dimen>
 
+    <!-- User Fragment -->
+    <dimen name="user_head_image">96dp</dimen>
+
 </resources>
