--- a/main/src/main/res/layout/fragment_user.xml
+++ b/main/src/main/res/layout/fragment_user.xml
@@ -8,6 +8,7 @@
     <com.kyletung.simplebookmovie.view.RectLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/base_color_white"
         android:elevation="@dimen/base_dimen_2dp"
         app:scaleHeight="9"
         app:scaleOrientation="vertical"
@@ -48,37 +49,52 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="@dimen/base_dimen_16dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user_location"/>
+                android:text="@string/user_location"
+                android:textColor="@color/base_color_black"
+                android:textSize="@dimen/base_text_16sp"/>
 
             <TextView
                 android:id="@+id/user_location"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@string/user_location_hint"
+                android:textColor="@color/base_color_gray"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user_signature"/>
+                android:layout_marginTop="@dimen/base_dimen_4dp"
+                android:text="@string/user_signature"
+                android:textColor="@color/base_color_black"
+                android:textSize="@dimen/base_text_16sp"/>
 
             <TextView
                 android:id="@+id/user_signature"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@string/user_signature_hint"
+                android:textColor="@color/base_color_gray"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/user_description"/>
+                android:layout_marginTop="@dimen/base_dimen_4dp"
+                android:text="@string/user_description"
+                android:textColor="@color/base_color_black"
+                android:textSize="@dimen/base_text_16sp"/>
 
             <TextView
                 android:id="@+id/user_description"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:text="@string/user_description_hint"
+                android:textColor="@color/base_color_gray"/>
 
         </LinearLayout>
 
@@ -92,7 +108,8 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:padding="@dimen/base_dimen_16dp">
 
             <TextView
                 android:layout_width="wrap_content"
