--- a/main/src/main/res/layout/fragment_book.xml
+++ b/main/src/main/res/layout/fragment_book.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize">
+        android:layout_height="?android:attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:elevation="@dimen/base_dimen_2dp">
 
     </LinearLayout>
 
@@ -36,7 +39,12 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/book_tab"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:elevation="@dimen/base_dimen_2dp"
+        app:tabIndicatorColor="@color/base_color_white"
+        app:tabSelectedTextColor="@color/top_bar_text_selected_color"
+        app:tabTextColor="@color/top_bar_text_unselected_color">
     </android.support.design.widget.TabLayout>
 
     <com.kyletung.simplebookmovie.view.TabViewPager
