--- a/main/src/main/res/layout/recycler_book_item.xml
+++ b/main/src/main/res/layout/recycler_book_item.xml
@@ -5,10 +5,10 @@
     android:id="@+id/book_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginTop="@dimen/base_dimen_4dp"
+    android:layout_marginBottom="@dimen/base_dimen_4dp"
     android:clickable="true"
-    app:cardCornerRadius="2dp"
-    app:cardElevation="3dp">
+    app:cardElevation="1dp">
 
     <LinearLayout
         android:layout_width="match_parent"
