实现头像背景切换

--- a/main/src/main/res/layout/fragment_user.xml
+++ b/main/src/main/res/layout/fragment_user.xml
@@ -14,6 +14,12 @@
         app:scaleOrientation="vertical"
         app:scaleWidth="16">
 
+        <ImageView
+            android:id="@+id/user_head_back"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -103,13 +109,21 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/base_dimen_16dp"
-        android:elevation="@dimen/base_dimen_1dp">
+        android:layout_marginTop="@dimen/base_dimen_16dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/setting_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/base_dimen_16dp">
+            android:gravity="center_vertical"
+            android:padding="@dimen/base_dimen_8dp">
+
+            <ImageView
+                android:layout_width="@dimen/base_dimen_24dp"
+                android:layout_height="@dimen/base_dimen_24dp"
+                android:layout_marginLeft="@dimen/base_dimen_8dp"
+                android:layout_marginRight="@dimen/base_dimen_8dp"
+                android:src="@drawable/setting_icon"/>
 
             <TextView
                 android:layout_width="wrap_content"
