--- a/main/src/main/res/layout/activity_book_detail.xml
+++ b/main/src/main/res/layout/activity_book_detail.xml
@@ -5,8 +5,6 @@
               android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -236,6 +234,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
+                android:visibility="gone"
                 android:id="@+id/book_detail_mine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
