--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,6 @@
     <!-- User Fragment -->
     <dimen name="user_head_image">96dp</dimen>
 
+    <dimen name="toolbar_elevation">2dp</dimen>
+
 </resources>
