--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/Theme.AppCompat.Light"/>
+    <include layout="@layout/common_toolbar"/>
 
     <LinearLayout
         android:id="@+id/settings_logout"
@@ -20,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_dimen_16dp"
         android:background="@color/base_color_white"
-        android:elevation="@dimen/base_dimen_2dp"
+        android:elevation="@dimen/base_dimen_1dp"
         android:gravity="center_vertical"
         android:padding="@dimen/base_dimen_8dp">
 
@@ -44,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_dimen_16dp"
         android:background="@color/base_color_white"
-        android:elevation="@dimen/base_dimen_2dp"
+        android:elevation="@dimen/base_dimen_1dp"
         android:gravity="center_vertical"
         android:padding="@dimen/base_dimen_8dp">
 
@@ -68,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/base_dimen_16dp"
         android:background="@color/base_color_white"
-        android:elevation="@dimen/base_dimen_2dp"
+        android:elevation="@dimen/base_dimen_1dp"
         android:gravity="center_vertical"
         android:padding="@dimen/base_dimen_8dp">
 
