--- a/app/src/main/res/layout/fragment_book.xml
+++ b/app/src/main/res/layout/fragment_book.xml
@@ -5,14 +5,6 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:elevation="@dimen/base_dimen_2dp">
-
-    </LinearLayout>
-
     <RelativeLayout
         android:id="@+id/book_login_container"
         android:layout_width="match_parent"
@@ -41,11 +33,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
-        android:elevation="@dimen/base_dimen_2dp"
+        android:elevation="@dimen/toolbar_elevation"
         app:tabIndicatorColor="@color/base_color_white"
         app:tabSelectedTextColor="@color/top_bar_text_selected_color"
-        app:tabTextColor="@color/top_bar_text_unselected_color">
-    </android.support.design.widget.TabLayout>
+        app:tabTextColor="@color/top_bar_text_unselected_color"/>
 
     <com.kyletung.simplebookmovie.view.TabViewPager
         android:id="@+id/book_viewpager"
