--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -5,24 +5,15 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="?android:attr/actionBarSize"
-        android:background="@color/colorPrimary"
-        android:elevation="@dimen/base_dimen_2dp">
-
-    </LinearLayout>
-
     <android.support.design.widget.TabLayout
         android:id="@+id/movie_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="@dimen/toolbar_elevation"
         android:background="@color/colorPrimary"
-        android:elevation="@dimen/base_dimen_2dp"
         app:tabIndicatorColor="@color/base_color_white"
         app:tabSelectedTextColor="@color/top_bar_text_selected_color"
-        app:tabTextColor="@color/top_bar_text_unselected_color">
-    </android.support.design.widget.TabLayout>
+        app:tabTextColor="@color/top_bar_text_unselected_color"/>
 
     <com.kyletung.simplebookmovie.view.TabViewPager
         android:id="@+id/movie_viewpager"
