添加 CoordinatorLayout 滚动支持

--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -6,5 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@color/colorPrimary"
+    app:layout_scrollFlags="scroll|enterAlways"
     app:popupTheme="@style/ToolBarPopupTheme"
     app:theme="@style/ToolBarTheme"/>
